Fix Lists to work correct on Mobile

--- a/src/components/ui/list/TableList/TableList.module.css
+++ b/src/components/ui/list/TableList/TableList.module.css
@@ -1,14 +1,11 @@
-/* Mobile 320px - 767px -- 812px */
+/* Desktop Screens */
 .tableListSection {
-    width: 100%;
     overflow-y: auto;
-    position: relative;
     background-color: var(--background-inner);
 }
 
 .tableList {
-    width: 700px;
-    max-width: var(--table-max-width, none);
+    width: 600px;
     margin: var(--table-margin, 0);
     border-collapse: separate;
     border-spacing: 0;
@@ -22,7 +19,7 @@
 }
 
 .tableList th {
-    text-align: right;
+    text-align: center;
     padding: 1rem 2rem 1rem 0;
     border-bottom: 2px solid #eee;
     font-weight: 600;
@@ -32,6 +29,15 @@
 
 .tableList td {
     text-align: right;
-    padding: 1rem 2rem 1rem 0;
+    padding: 1rem 1rem 1rem 0;
     border-bottom: 1px solid #eee;
 }
+
+/* Mobile Screens */
+@media (max-width: 767px) {
+    .tableList {
+        width: 100%;
+        max-width: none;
+    }
+}
+
